unpackaged/main/default/objects/Carrier__c/Carrier__c.object-meta.xml
<CustomObject>
    <label>Carrier Data</label>
    <nameField>
        <label>Carrier Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carrier Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>