unpackaged/main/default/objects/Carrier__c/fields/Adjuster__c.field-meta.xml
<CustomField>
    <fullName>Adjuster__c</fullName>
    <label>Adjuster</label>
    <length>255</length>
    <type>Text</type>
</CustomField>