unpackaged/main/default/objects/Carrier__c/fields/CL_Date_Administrator_Notified__c.field-meta.xml
<CustomField>
    <fullName>CL_Date_Administrator_Notified__c</fullName>
    <label>Date Administrator Notified</label>
    <type>Date</type>
</CustomField>