unpackaged/main/default/objects/Carrier__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim</label>
    <referenceTo>Claims__Claim__c</referenceTo>
    <relationshipLabel>Carrier Data</relationshipLabel>
    <relationshipName>Carrier_Data</relationshipName>
    <type>Lookup</type>
</CustomField>