unpackaged/main/default/objects/Carrier__c/fields/Claim_No__c.field-meta.xml
<CustomField>
    <fullName>Claim_No__c</fullName>
    <label>Claim No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>