unpackaged/main/default/objects/Carrier__c/fields/Claimant_Address__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Address__c</fullName>
    <label>Claimant Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>