unpackaged/main/default/objects/Carrier__c/fields/Claimant_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Contacted__c</fullName>
    <label>Claimant Contacted?</label>
    <type>Date</type>
</CustomField>