unpackaged/main/default/objects/Carrier__c/fields/Date_First_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Contacted__c</fullName>
    <label>Date First Contacted</label>
    <type>Date</type>
</CustomField>