unpackaged/main/default/objects/Carrier__c/fields/Date_Incident_Reported__c.field-meta.xml
<CustomField>
    <fullName>Date_Incident_Reported__c</fullName>
    <label>Date Incident Reported</label>
    <type>Date</type>
</CustomField>