unpackaged/main/default/objects/Carrier__c/fields/Defense_Attorney_State__c.field-meta.xml
<CustomField>
    <fullName>Defense_Attorney_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>