unpackaged/main/default/objects/Carrier__c/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>