unpackaged/main/default/objects/Carrier__c/fields/Diary_ID__c.field-meta.xml
<CustomField>
    <fullName>Diary_ID__c</fullName>
    <label>Diary ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>