unpackaged/main/default/objects/Carrier__c/fields/Disclosure_Form_Date__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Form_Date__c</fullName>
    <label>Disclosure Form Date</label>
    <type>Date</type>
</CustomField>