unpackaged/main/default/objects/Carrier__c/fields/Disclosure_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Form_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disclosure Form Received</label>
    <type>Checkbox</type>
</CustomField>