unpackaged/main/default/objects/Carrier__c/fields/Flags__c.field-meta.xml
<CustomField>
    <fullName>Flags__c</fullName>
    <label>Flags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>