unpackaged/main/default/objects/Carrier__c/fields/H_N_Note_Type__c.field-meta.xml
<CustomField>
    <fullName>H_N_Note_Type__c</fullName>
    <label>Note Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>