unpackaged/main/default/objects/Carrier__c/fields/Incident_Object__c.field-meta.xml
<CustomField>
    <fullName>Incident_Object__c</fullName>
    <label>Incident Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>