unpackaged/main/default/objects/Carrier__c/fields/Incurred_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Amount_Total__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>