unpackaged/main/default/objects/Carrier__c/fields/Judge_Commissioner__c.field-meta.xml
<CustomField>
    <fullName>Judge_Commissioner__c</fullName>
    <label>Judge/Commissioner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>