unpackaged/main/default/objects/Carrier__c/fields/Jurisdiction_Claim_No__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_Claim_No__c</fullName>
    <label>Jurisdiction Claim No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>