unpackaged/main/default/objects/Carrier__c/fields/Litigated_Date__c.field-meta.xml
<CustomField>
    <fullName>Litigated_Date__c</fullName>
    <label>Litigated Date</label>
    <type>Date</type>
</CustomField>