unpackaged/main/default/objects/Carrier__c/fields/Mass_Tort_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Mass_Tort_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mass Tort Indicator</label>
    <type>Checkbox</type>
</CustomField>