unpackaged/main/default/objects/Carrier__c/fields/MMI_Date__c.field-meta.xml
<CustomField>
    <fullName>MMI_Date__c</fullName>
    <label>MMI Date</label>
    <type>Date</type>
</CustomField>