unpackaged/main/default/objects/Carrier__c/fields/Most_Recent_Adjuster_Notes__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Adjuster_Notes__c</fullName>
    <label>Most Recent Adjuster Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>