unpackaged/main/default/objects/Carrier__c/fields/Net_Paid_Amount_Medical__c.field-meta.xml
<CustomField>
    <fullName>Net_Paid_Amount_Medical__c</fullName>
    <label>Medical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>