unpackaged/main/default/objects/Carrier__c/fields/Notes_Categories__c.field-meta.xml
<CustomField>
    <fullName>Notes_Categories__c</fullName>
    <label>Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>