unpackaged/main/default/objects/Carrier__c/fields/Notes_Note__c.field-meta.xml
<CustomField>
    <fullName>Notes_Note__c</fullName>
    <label>Note</label>
    <length>13000</length>
    <type>LongTextArea</type>
</CustomField>