unpackaged/main/default/objects/Carrier__c/fields/Notes_Service_Author__c.field-meta.xml
<CustomField>
    <fullName>Notes_Service_Author__c</fullName>
    <label>Service/Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>