unpackaged/main/default/objects/Carrier__c/fields/OSHA_Reportable__c.field-meta.xml
<CustomField>
    <fullName>OSHA_Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OSHA Reportable</label>
    <type>Checkbox</type>
</CustomField>