unpackaged/main/default/objects/Carrier__c/fields/Outstanding_Amount_Indemnity__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Amount_Indemnity__c</fullName>
    <label>Indemnity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>