unpackaged/main/default/objects/Carrier__c/fields/Plaintiff_Attorney_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Attorney_Attorney__c</fullName>
    <label>Attorney</label>
    <length>255</length>
    <type>Text</type>
</CustomField>