unpackaged/main/default/objects/Carrier__c/fields/Plaintiff_Attorney_Phone__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Attorney_Phone__c</fullName>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>