unpackaged/main/default/objects/Carrier__c/fields/Policy_Report_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Report_Number__c</fullName>
    <label>Policy Report Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>