unpackaged/main/default/objects/Carrier__c/fields/Posted_Summary_Category__c.field-meta.xml
<CustomField>
    <fullName>Posted_Summary_Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>