unpackaged/main/default/objects/Carrier__c/fields/Posted_Summary_Current_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Posted_Summary_Current_Reserve__c</fullName>
    <label>Current Reserve</label>
    <length>255</length>
    <type>Text</type>
</CustomField>