unpackaged/main/default/objects/Carrier__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <label>Primary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>