unpackaged/main/default/objects/Carrier__c/fields/Res_Payments_Claim_No__c.field-meta.xml
<CustomField>
    <fullName>Res_Payments_Claim_No__c</fullName>
    <label>Claim #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>