unpackaged/main/default/objects/Carrier__c/fields/Res_Payments_Claimant__c.field-meta.xml
<CustomField>
    <fullName>Res_Payments_Claimant__c</fullName>
    <label>Claimant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>