unpackaged/main/default/objects/Carrier__c/fields/Res_Payments_Company__c.field-meta.xml
<CustomField>
    <fullName>Res_Payments_Company__c</fullName>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>