unpackaged/main/default/objects/Carrier__c/fields/Res_Payments_Date_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Res_Payments_Date_of_Incident__c</fullName>
    <label>Date of Incident</label>
    <type>Date</type>
</CustomField>