unpackaged/main/default/objects/Carrier__c/fields/Responded_to_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Responded_to_Carrier__c</fullName>
    <label>Responded to Carrier</label>
    <type>Date</type>
</CustomField>