unpackaged/main/default/objects/Carrier__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <label>Results</label>
    <length>255</length>
    <type>Text</type>
</CustomField>