unpackaged/main/default/objects/Carrier__c/fields/WC_Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>WC_Claim_Type__c</fullName>
    <label>WC Claim Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>