unpackaged/main/default/objects/Carrier__c/recordTypes/Corvel.recordType-meta.xml
<RecordType>
    <fullName>Corvel</fullName>
    <active>true</active>
    <label>Corvel</label>
</RecordType>