unpackaged/main/default/objects/Carrier__c/recordTypes/Hartford.recordType-meta.xml
<RecordType>
    <fullName>Hartford</fullName>
    <active>true</active>
    <label>Hartford</label>
</RecordType>