unpackaged/main/default/objects/Carrier__c/recordTypes/SeaWest.recordType-meta.xml
<RecordType>
    <fullName>SeaWest</fullName>
    <active>true</active>
    <label>SeaWest</label>
</RecordType>