unpackaged/main/default/objects/Carrier__c/recordTypes/Sedgwick.recordType-meta.xml
<RecordType>
    <fullName>Sedgwick</fullName>
    <active>true</active>
    <label>Sedgwick</label>
</RecordType>