unpackaged/main/default/objects/Carrier__c/recordTypes/Sentry.recordType-meta.xml
<RecordType>
    <fullName>Sentry</fullName>
    <active>true</active>
    <label>Sentry</label>
</RecordType>